--- a/com.0ihsan.stile.plist
+++ b/com.0ihsan.stile.plist
@@ -13,6 +13,7 @@
 	<key>ProgramArguments</key>
 	<array>
 		<string>/usr/local/bin/stile</string>
+		<string>0</string>
 	</array>
 	<key>RunAtLoad</key>
 	<true/>
